--- a/Backend/.env
+++ b/Backend/.env
@@ -1,6 +1,6 @@
 JWT_SECRET=votre_super_secret_jwt_tres_securise_ici
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=root
-DB_NAME=gestion_commandes
-PORT=3000
+MYSQLHOST=tramway.proxy.rlwy.net
+MYSQLPORT=43032
+MYSQLUSER=root
+MYSQLPASSWORD=PXncQKRHxvSLIhxHPDqRhlvKQVGEWYrg
+MYSQLDATABASE=sellmaster
