--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.6.1", 
     "mariadb": "^3.4.5",
     "memory-cache": "^0.2.0",
     "multer": "^2.0.2"
@@ -25,3 +26,5 @@
     "nodemon": "^3.1.11"
   }
 }
+ 
+ 
