--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,14 +17,12 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.6.1", 
     "mariadb": "^3.4.5",
     "memory-cache": "^0.2.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "mysql2": "^3.15.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
- 
- 
